feat: Implemented firebase connection
